<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="medicineName">   Medicine Name </string>
    <string name="enterMedicineName">Enter the name of medicine</string>
    <string name="searchButton">Search</string>
    <string name="medicineNamedes">Searches the database with medicine names</string>
    <string name="saltdes"></string>
    <string name="saltName">Salt Names</string>
    <string name="primarySalts">Enter primary salts separated by comma</string>
    <string name="secondarySalts">Enter secondary salts separated by comma</string>
    <string name="MedcineDescription">Searches medicines by trade name</string>
    <string name="SaltsDescription">Searches medicine by salts names</string>
    <string name="infoProvided">Alternative Medicines  </string>
    <string name="output">Output</string>
    <string name="title_activity_medicine_name">MedicineNameActivity</string>
    <string name="title_activity_salts">SaltsActivity</string>
    <string name="title_activity_handle_medicine_name">HandleMedicineName</string>
    <string name="title_activity_enter_form">MainActivity</string>
    <string name="title_activity_entry_form">EntryForm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="name">MedicineName</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
	<string name="unit">Unit</string>
	<string name="pack">Standard Pack</string>
	<string name="brand">BrandName</string>
	<string name="mtxtPrimary">Primary salts separated by ,</string>
	<string name="mtxtSecondary">Secondary salts separated by ,</string>

</resources>
