<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" 
        android:textSize="20sp"
        android:textColor="#669900"/>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price" 
        android:textColor="#669900"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type" 
        android:textColor="#669900"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit" 
         android:textColor="#669900"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtStdPack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pack" 
         android:textColor="#669900"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
         android:textColor="#669900"
        android:textSize="20sp" />

</LinearLayout>
