<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/txtStandardPack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/textViewMedicineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="20dp"
        android:src="@drawable/mn"
        android:text="@string/medicineName"
        android:textSize=" 40dp" />

    <EditText
        android:id="@+id/enterMedicineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewMedicineName"
        android:layout_below="@+id/textViewMedicineName"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enterMedicineName" />

    <ImageView
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:contentDescription="@string/medicineNamedes"
        android:onClick="searchByMedicineName"
        android:src="@drawable/search_button"
        android:text="@string/searchButton" />

</RelativeLayout>
