<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activities.MainActivity$PlaceholderFragment" >

        <EditText
            android:id="@+id/enterPrimarySalts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewEnterSaltName"
            android:layout_below="@+id/textViewEnterSaltName"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/primarySalts" />

        <ImageView
            android:id="@+id/textViewEnterSaltName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="20dp"
            android:src="@drawable/slt"
            android:text="@string/saltName"
            android:textSize=" 40dp" />

        <EditText
            android:id="@+id/enterSecondrySalts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/searchButton"
            android:layout_alignLeft="@+id/enterPrimarySalts"
            android:layout_marginBottom="19dp"
            android:ems="10"
            android:hint="@string/secondarySalts" />

        <ImageView
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="51dp"
            android:contentDescription="@string/saltdes"
            android:onClick="searchBySalts"
            android:src="@drawable/search_button"
            android:text="@string/searchButton" />

</RelativeLayout>
